tests/functional/lang/eval-fail-eol-2.err.exp
error: undefined variable 'invalid'
       at /pwd/lang/eval-fail-eol-2.bsd:2:1:
            1| # foo
            2| invalid
             | ^
            3| # bar
